Update BotController.java